# codex-transcripts

./: README.md  pyproject.toml
src/codex_transcripts/: __init__.py  archive.py  assets.py  cli.py  common.py  exporters.py  gist.py  parser.py  redaction.py  renderer.py  search_index.py  session_diff.py  stats.py
src/codex_transcripts/templates/: base.html  diff.html  index.html  macros.html  master_index.html  page.html  project_index.html  search.js
src/codex_transcripts/templates/assets/: archive-filters.js  base.css  runtime.js  search.js
src/codex_transcripts/templates/assets/themes/: compact.css  default.css  high-contrast.css
tests/: test_archive.py  test_cli.py  test_gist.py  test_parser.py  test_renderer.py  test_sanitize.py  test_search_index.py
tests/fixtures/: session_current.jsonl
